--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,20 @@ code {
   height: 5em;
   width: 5em;
 }
+.scoreBar{
+  position: absolute;
+  font-size: 200%;
+  margin-bottom: 0;
+  margin-top: 1%;
+  margin-left: 89%;
+  padding: 0px;
+  z-index: 2;
+  font-weight: bold;
+}
+.default{
+  margin: 0;
+  padding: 0;
+}
+.s{
+  position: -webkit-sticky;
+}
