--- a/src/index.css
+++ b/src/index.css
@@ -33,13 +33,14 @@ code {
   font-weight: bold;
 }
 .video {
-  overflow: hidden;
-  z-index: -100;
   position: absolute;
   height: 100%;
   width: 100%;
-  top: 0;
-  left: 0;
+  left: 50%;
+  top: 50%;
+  object-fit: cover;
+  transform: translate(-50%,-50%);
+  z-index: -1;
 }
 .default{
   margin: 0;
