--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,9 @@ code {
   position: absolute;
   font-size: 200%;
   margin-bottom: 0;
-  margin-top: 1%;
-  margin-left: 89%;
-  padding: 0px;
+  margin-top: 0;
+  right: 0;
+  padding: 0;
   z-index: 2;
   font-weight: bold;
 }
